visible id fixed

--- a/src/app/components/task-modal/task-modal.css
+++ b/src/app/components/task-modal/task-modal.css
@@ -1,3 +1,6 @@
+.task-modal{
+  z-index: 100;
+}
 .task-modal .modal-content {
     max-width: 600px;
 }
